# Kernelaw

./: Cargo.toml  README.md
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: hooks.rs  lib.rs  model_config.rs  module.rs  provider.rs  runtime.rs  tool_runtime.rs  types.rs
docs/: current-kernel-design.md
